# getcli-rust

./: Cargo.toml  README.md
src/: :w  jsonstring_to_hashmap.rs  main.rs  save_response.rs  saved_response.json  value_empty_check.rs
