[package]
name = "getcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features= ["derive"]}
reqwest = {version = "0.11.12", features=["blocking", "json"]}
serde = {version = "1.0.87"}
substring = {version= "1.4.5"}
prettyprint = "*"
